feat: set locale

--- a/effective_ansible/sec3/linux_configuration/linux_configuration.yml
+++ b/effective_ansible/sec3/linux_configuration/linux_configuration.yml
@@ -6,3 +6,5 @@
   tasks:
     - ansible.builtin.import_role: name=common/hostname
       tags: hostname
+    - ansible.builtin.import_role: name=common/locale
+      tags: locale
