[sec3] chore: debug ansible_pkg_mgr

--- a/effective_ansible/sec3/inventory.ini
+++ b/effective_ansible/sec3/inventory.ini
@@ -2,3 +2,11 @@ localhost
 
 [test_servers]
 10.128.0.3 
+
+[rocky_linux]
+alfa ansible_host=10.128.0.5
+bravo ansible_host=10.128.0.4
+charlie ansible_host=10.128.0.6
+
+[linux_servers:children]
+rocky_linux
