[sec3] feat: tasks to install and update packages

--- a/effective_ansible/sec3/linux_configuration/linux_configuration.yml
+++ b/effective_ansible/sec3/linux_configuration/linux_configuration.yml
@@ -8,3 +8,5 @@
       tags: hostname
     - ansible.builtin.import_role: name=common/locale
       tags: locale
+    - ansible.builtin.import_role: name=common/packages
+      tags: packages
