--- a/effective_ansible/sec3/linux_configuration/roles/common/users/vars/main.yml
+++ b/effective_ansible/sec3/linux_configuration/roles/common/users/vars/main.yml
@@ -2,7 +2,7 @@
 new_users:
   adm_member_01:
     comment: "Administration member 01"
-    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }"
+    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }}"
     groups:
       - administrators
       - system_managers
@@ -13,7 +13,7 @@ new_users:
 
   ops_member_01:
     comment: "Operation member 01"
-    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }"
+    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }}"
     groups:
       - operators
     add_authorized_key: true
@@ -22,7 +22,7 @@ new_users:
 
   ops_member_02:
     comment: "Operation member 02"
-    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }"
+    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }}"
     groups:
       - operators
     add_authorized_key: true
@@ -31,7 +31,7 @@ new_users:
 
   alice:
     comment: "Normal user: alice"
-    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }"
+    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }}"
     groups:
       - users
       - web_designers
@@ -40,7 +40,7 @@ new_users:
 
   bob:
     comment: "Normal user: bob"
-    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }"
+    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }}"
     groups:
       - users
       - app_developers
@@ -50,7 +50,7 @@ new_users:
 
   carol:
     comment: "Normal user: carol"
-    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }"
+    initial_password: "{{ 'P@s$w0rd' | password_hash('sha256') }}"
     groups:
       - users
       - db_admins
