--- a/effective_ansible/sec3/linux_configuration/linux_configuration.yml
+++ b/effective_ansible/sec3/linux_configuration/linux_configuration.yml
@@ -10,3 +10,5 @@
       tags: locale
     - ansible.builtin.import_role: name=common/packages
       tags: packages
+    - ansible.builtin.import_role: name=common/users
+      tags: users
