--- a/effective_ansible/sec3/linux_configuration/linux_configuration.yml
+++ b/effective_ansible/sec3/linux_configuration/linux_configuration.yml
@@ -12,3 +12,11 @@
       tags: packages
     - ansible.builtin.import_role: name=common/users
       tags: users
+
+  post_tasks:
+    - name: Restart target nodes
+      ansible.builtin.reboot:
+    - name: Waiting connection
+      ansible.builtin.wait_for_connection:
+        delay: 5
+        timeout: 60
