[sec3] fix: item.comment to item.value.comment

--- a/effective_ansible/sec3/linux_configuration/roles/common/users/tasks/main.yml
+++ b/effective_ansible/sec3/linux_configuration/roles/common/users/tasks/main.yml
@@ -8,7 +8,7 @@
   ansible.builtin.user:
     name: "{{ item.key }}"
     password: "{{ item.value.initial_password}}"
-    comment: "{{ item.comment }}"
+    comment: "{{ item.value.comment }}"
     groups: "{{ item.value.groups }}"
     shell: /bin/bash
     home: "home/{{ item.key }}"
