[sec3] fix: create users in /home/ directory

--- a/effective_ansible/sec3/linux_configuration/roles/common/users/tasks/main.yml
+++ b/effective_ansible/sec3/linux_configuration/roles/common/users/tasks/main.yml
@@ -11,7 +11,7 @@
     comment: "{{ item.value.comment }}"
     groups: "{{ item.value.groups }}"
     shell: /bin/bash
-    home: "home/{{ item.key }}"
+    home: "/home/{{ item.key }}"
     state: present
   loop: "{{ new_users | dict2items }}"
 
