[sec3] feat: create users (#4)
* [sec3] users variables

* [sec3] fix: initial_password without trailing parentheses

* [sec3] feat: create users

* [sec3] feat: post tasks

* [sec3] fix: item.comment to item.value.comment

* [sec3] fix: create users in /home/ directory

* [sec3] fix: no colon in useradd comment

* [sec3] fix: normal user can not chmod but chown as root

--- a/effective_ansible/sec3/linux_configuration/linux_configuration.yml
+++ b/effective_ansible/sec3/linux_configuration/linux_configuration.yml
@@ -10,3 +10,13 @@
       tags: locale
     - ansible.builtin.import_role: name=common/packages
       tags: packages
+    - ansible.builtin.import_role: name=common/users
+      tags: users
+
+  post_tasks:
+    - name: Restart target nodes
+      ansible.builtin.reboot:
+    - name: Waiting connection
+      ansible.builtin.wait_for_connection:
+        delay: 5
+        timeout: 60
