--- a/effective_ansible/sec4/roles/nodeexporter/tasks/main.yml
+++ b/effective_ansible/sec4/roles/nodeexporter/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 - ansible.builtin.include_tasks: roles/nodeexporter/tasks/check_install.yml
 - ansible.builtin.include_tasks: roles/nodeexporter/tasks/install.yml
-  # - ansible.builtin.include_tasks: roles/nodeexporter/tasks/configure.yml
+- ansible.builtin.include_tasks: roles/nodeexporter/tasks/configure.yml
