[sec4] feat: install and configure prometheus

--- a/effective_ansible/sec4/roles/nodeexporter/tasks/configure.yml
+++ b/effective_ansible/sec4/roles/nodeexporter/tasks/configure.yml
@@ -1,5 +1,5 @@
 ---
-- name: configure / Update prometheus.yml
+- name: configure / Update node_exporter.service
   ansible.builtin.template:
     src: templates/node_exporter.service.j2
     dest: /etc/systemd/system/node_exporter.service
