[sec4] fix: typo 'ansible.builin.file'

--- a/effective_ansible/sec4/roles/prometheus/tasks/install.yml
+++ b/effective_ansible/sec4/roles/prometheus/tasks/install.yml
@@ -8,7 +8,7 @@
     remote_src: true
 
 - name: configure / Make directory /var/lib/prometheus
-  ansible.builin.file:
+  ansible.builtin.file:
     path: /var/lib/prometheus
     state: directory
     owner: "{{ prometheus_os_user }}"
