--- a/effective_ansible/sec4/roles/grafana/tasks/configure.yml
+++ b/effective_ansible/sec4/roles/grafana/tasks/configure.yml
@@ -15,3 +15,19 @@
     ds_type: prometheus
     ds_url: "http://{{ hostvars['prometheus_server'].ansible_host }}:{{ prometheus_port }}"
   register: register_datasource
+
+- name: configure / Create Grafana Data Source
+  ansible.builtin.template:
+    src: templates/grafana_dashboard.json.j2
+    dest: grafana_dashboard.json
+  vars:
+    datasource_uid: "{{ register_datasource.datasource.uid }}"
+
+- name: configure / Craete Grafana dashboard
+  community.grafana.grafana_dashboard:
+    grafana_url: "http://{{ hostvars['grafana_server'].ansible_host }}:{{ grafana_port }}"
+    grafana_user: "{{ grafana_user }}"
+    grafana_password: "{{ grafana_password }}"
+    state: present
+    overwrite: true
+    path: grafana_dashboard.json
