[sec5] fix: invalid end colon

--- a/effective_ansible/sec5/ansible-vault/encrypt-string/site.yml
+++ b/effective_ansible/sec5/ansible-vault/encrypt-string/site.yml
@@ -8,6 +8,6 @@
       ansible.builtin.include_vars:
         file: developers.yml
         name: developers
-    - name: show developers:
+    - name: show developers
       ansible.builtin.debug:
         msg: "{{ developers }}"
